vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_comptime_selector.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_comptime_selector.vv:6:4: error: expression evaluated but not used
    4 |     $for field in embed_file.EmbedFileData.fields {
    5 |         $if field.name == 'path' {
    6 |             '' == $embed_file(@FILE).$(field.name)
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 |         }
    8 |     }
