vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_comptime_selector.vv
import v.embed_file

fn main() {
	$for field in embed_file.EmbedFileData.fields {
		$if field.name == 'path' {
			'' == $embed_file(@FILE).$(field.name)
		}
	}
}
